# Proyecto_PC3

./: .gitignore  Makefile  README.md  environment.yml  pyproject.toml
pcec3/: database.py  main.py  models.py  queries.py  requirements.txt  scraper.py  seed.py
